# trash

bus-rotes/: main.cpp
convert-map-set-to-vector/: main.cpp
find-pets/: main.cpp
pet-shop/: pet-shop.cpp
rock-scissors-paper/: rock-scissors-paper.cpp
thread-cin-cout/: .gitignore  CMakeLists.txt  CMakePresets.json
thread-cin-cout/cmake/: search_sources.cmake
thread-cin-cout/src/: main.cpp
